2011-01-20  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #14098: When sending mail, use TYPO3_CONF_VAR for default from address if no other address is provided (Thanks to Jeff Segars and Marcus Krause)

2011-01-20  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #17105: deprecate "disable_autocreate" feature
	* Fixed bug #17106: sys_workspace table should be defined at one place only
	* Fixed bug #17104: "Create new workspace projects" in be_users/be_groups not required anymore

2011-01-20  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #17114: Install Tool does not install extensions properly
	* Fixed bug #16926: Database is not updated during workspace-migration wizard
	* Fixed bug #17102: migrateWorkspaces in Install-Tool doesn't show up in all relevant situations (Thanks to Tolleiv Nietsch)
	* Fixed bug #17088: Cleanup: CSH display in new record wizard should use new API

2011-01-20  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #17116: All images get reduced to 25x25px upon saving if no size is set
	* Fixed bug #17063: Creating new pages in a workspace shows the page also live

2011-01-20  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17178: Rename extension "list" to "recordlist"
	* Fixed bug #17162: Missing localization in t3lib_tsstyleconfig

2011-01-20  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #17044: Styling of TCEforms with renderMode=checkbox
	* Fixed bug #17155: Active and hover states are hard to distinguish
	* Fixed bug #16971: Improve ExtDirect error handling (Thanks to Stefan Galinski)

2011-01-20  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed issue #17176: Remove unnecessary comments and color profiles from all shipped .png / .gif files (Thanks to Steffen Gebert)
	* Fixed issue #17143: Unclean property declaration in t3lib_mail_Message API (Thanks to Steffen Müller)
	* Fixed issue #17153: Protect C(R)UD actions against CSRF (Thanks to Helmut Hummel)